@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 S3method(kproto,default)
+S3method(plot,kproto)
 S3method(predict,kproto)
 S3method(print,kproto)
 S3method(summary,kproto)
